[package]
name = "imghost"
version = "0.1.0"
authors = ["Hugo Peixoto <hugo.peixoto@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-multipart = "0.3.0"
actix-files = "0.4.0"
rand = "0.7.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
mime = "0.3.16"
bytes = "0.4.10"
futures = "0.3.5"
